.ros/log/965576ca-949b-11ec-9a86-7c507959f385/gripper_action_server-3.log
[rospy.client][INFO] 2022-02-23 11:27:32,033: init_node, name[/gripper_action_server], pid[15872]
[xmlrpc][INFO] 2022-02-23 11:27:32,034: XML-RPC server binding to 0.0.0.0:0
[xmlrpc][INFO] 2022-02-23 11:27:32,034: Started XML-RPC server [http://FM00351-u:35683/]
[rospy.init][INFO] 2022-02-23 11:27:32,034: ROS Slave URI: [http://FM00351-u:35683/]
[rospy.impl.masterslave][INFO] 2022-02-23 11:27:32,034: _ready: http://FM00351-u:35683/
[rospy.registration][INFO] 2022-02-23 11:27:32,036: Registering with master node http://localhost:11311
[xmlrpc][INFO] 2022-02-23 11:27:32,036: xml rpc node: starting XML-RPC server
[rospy.init][INFO] 2022-02-23 11:27:32,135: registered with master
[rospy.rosout][INFO] 2022-02-23 11:27:32,135: initializing /rosout core topic
[rospy.rosout][INFO] 2022-02-23 11:27:32,136: connected to core topic /rosout
[rospy.simtime][INFO] 2022-02-23 11:27:32,137: /use_sim_time is not set, will not subscribe to simulated time [/clock] topic
[rospy.internal][INFO] 2022-02-23 11:27:32,342: topic[/rosout] adding connection to [/rosout], count 0
[rospy.internal][INFO] 2022-02-23 11:27:37,126: topic[/rosout] adding connection to [/rostopic_15891_1645615656885], count 1
[rospy.internal][INFO] 2022-02-23 11:27:47,840: topic[/gripper_action_server/feedback] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-02-23 11:27:47,840: topic[/gripper_action_server/result] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-02-23 11:27:47,841: topic[/gripper_action_server/status] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-02-23 11:27:47,925: topic[/gripper_action_server/cancel] adding connection to [http://FM00351-u:38199/], count 0
[rospy.internal][INFO] 2022-02-23 11:27:47,926: topic[/gripper_action_server/goal] adding connection to [http://FM00351-u:38199/], count 0
[rosout][INFO] 2022-02-23 11:27:47,940: state: initializing
[rosout][INFO] 2022-02-23 11:27:47,942: controller is started now
[rospy.internal][INFO] 2022-02-23 11:27:47,989: topic[/Robotiq2FGripperRobotOutput] adding connection to [/Robotiq2FGripperRtuNode], count 0
[rospy.internal][INFO] 2022-02-23 11:28:22,946: topic[/rosout] removing connection to /rostopic_15891_1645615656885
[rospy.core][INFO] 2022-02-23 11:30:42,814: signal_shutdown [signal-2]
[rospy.internal][INFO] 2022-02-23 11:30:42,819: topic[/gripper_action_server/feedback] removing connection to /gripper_action_client
[rospy.internal][INFO] 2022-02-23 11:30:42,819: topic[/gripper_action_server/status] removing connection to /gripper_action_client
[rospy.internal][INFO] 2022-02-23 11:30:42,819: topic[/rosout] removing connection to /rosout
[rospy.internal][INFO] 2022-02-23 11:30:42,819: topic[/gripper_action_server/result] removing connection to /gripper_action_client
[rospy.internal][INFO] 2022-02-23 11:30:42,820: topic[/Robotiq2FGripperRobotOutput] removing connection to /Robotiq2FGripperRtuNode
[rospy.internal][INFO] 2022-02-23 11:30:42,820: topic[/gripper_action_server/goal] removing connection to http://FM00351-u:38199/
[rospy.internal][WARNING] 2022-02-23 11:30:42,821: Unknown error initiating TCP/IP socket to FM00351-u:34905 (http://FM00351-u:38199/): Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 562, in connect
    self.read_header()
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 657, in read_header
    self._validate_header(read_ros_handshake_header(sock, self.read_buff, self.protocol.buff_size))
AttributeError: 'NoneType' object has no attribute 'buff_size'

[rospy.topics][ERROR] 2022-02-23 11:30:42,821: Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/topics.py", line 326, in close
    c.close()
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 846, in close
    self.socket.close()
AttributeError: 'NoneType' object has no attribute 'close'

[rospy.internal][INFO] 2022-02-23 11:30:42,821: topic[/gripper_action_server/cancel] removing connection to http://FM00351-u:38199/
[rospy.impl.masterslave][INFO] 2022-02-23 11:30:42,821: signal-2
[rosout][ERROR] 2022-02-23 11:30:44,918: Exception in your execute callback: unexpected EOF while parsing (<string>, line 0)
Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/actionlib/simple_action_server.py", line 289, in executeLoop
    self.execute_callback(goal)
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/gripper_action_server.py", line 38, in execute
    Robotiq2FGripperSlipController().controller()
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/Robotiq2FGripperSlipController.py", line 801, in controller
    inputs = self.askForInput(self.command)
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/Robotiq2FGripperSlipController.py", line 774, in askForInput
    return input(strAskForCommand)
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing

[rospy.core][INFO] 2022-02-23 11:30:45,021: signal_shutdown [atexit]
